<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.epam.tc</groupId>
    <artifactId>Kirill_Popov</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <testng.version>7.4.0</testng.version>
        <selenium-java.version>4.1.1</selenium-java.version>
        <webdrivermanager.version>5.0.2</webdrivermanager.version>
        <checkstyle.version>9.2.1</checkstyle.version>
        <maven-checkstyle-plugin.version>3.1.2</maven-checkstyle-plugin.version>
        <assertj-core.version>3.4.1</assertj-core.version>
        <maven-compiler-plugin.version>3.8.0</maven-compiler-plugin.version>
        <maven-surefire-plugin.version>3.0.0-M5</maven-surefire-plugin.version>
        <testng.suite.file>${testng.configs.path}/testNG.xml</testng.suite.file>
        <testng.configs.path>${project.build.testOutputDirectory}</testng.configs.path>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>${testng.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>${assertj-core.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-java</artifactId>
            <version>${selenium-java.version}</version>
        </dependency>
        <dependency>
            <groupId>io.github.bonigarcia</groupId>
            <artifactId>webdrivermanager</artifactId>
            <version>${webdrivermanager.version}</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>${maven-checkstyle-plugin.version}</version>
                <dependencies>
                    <dependency>
                        <groupId>com.puppycrawl.tools</groupId>
                        <artifactId>checkstyle</artifactId>
                        <version>${checkstyle.version}</version>
                    </dependency>
                </dependencies>
                <configuration>
                    <configLocation>
                        <!--  pay attention to use exact url for checkstyle plugin ruleset  -->
                        https://raw.githubusercontent.com/DmitryKhodakovsky/epam-training-center-code-checkers-configurations/main/checkstyle/checkstyle.xml
                    </configLocation>
                    <encoding>${project.build.sourceEncoding}</encoding>
                    <includeTestSourceDirectory>true</includeTestSourceDirectory>
                    <consoleOutput>true</consoleOutput>
                    <failsOnError>true</failsOnError>
                    <linkXRef>false</linkXRef>
                </configuration>
                <executions>
                    <execution>
                        <id>validate</id>
                        <phase>validate</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <configuration>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven-surefire-plugin.version}</version>
                <configuration>
                    <suiteXmlFiles>
                        <suiteXmlFile>${testng.suite.file}</suiteXmlFile>
                    </suiteXmlFiles>
                </configuration>
            </plugin>


        </plugins>

    </build>

    <profiles>
        <profile>
            <id>All tests</id>
            <properties>
                <testng.suite.file>${testng.configs.path}/RunAllTestNG.xml</testng.suite.file>
            </properties>
        </profile>

        <profile>
            <id>Sub and Sum tests</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <testng.suite.file>${testng.configs.path}/RunSumSubTestNG.xml</testng.suite.file>
            </properties>

        </profile>

        <profile>
            <id>Multiply and Divide tests</id>
            <properties>
                <testng.suite.file>${testng.configs.path}/RunMultiplyDivideTestNG.xml</testng.suite.file>
            </properties>
        </profile>

        <profile>
            <id>SecondHomeWork</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <testng.suite.file>${testng.configs.path}/TestNG.xml</testng.suite.file>
            </properties>

<<<<<<< HEAD
=======
        </profile>

        <profile>
            <id>ThirdHomework</id>
            <properties>
            <testng.suite.file>${testng.configs.path}/ThirdHomeWorkTestNG.xml</testng.suite.file>
            </properties>
>>>>>>> bd2570d (Changes after fixing HW2)
        </profile>
    </profiles>

</project>
